# CSE

./: .gitignore  Cargo.toml  README.md  license.html
benches/: benchmark.rs
examples/: barnes_hut.rs
src/: algebraic_solvers.rs  barnes_hut.rs  containers.rs  csv.rs  eigen.rs  fft.rs  graphs.rs  interpolation.rs  least_squares.rs  lib.rs  linalg.rs  newton.rs  octree.rs  ode.rs  ode_solvers.rs  quadrature.rs  sorting.rs
src/containers/: binary_heap.rs  mod.rs  sorted_binary_tree.rs
src/containers/binary_heap/: mod.rs  node_storage.rs  vec_storage.rs
src/linalg/: eigen.rs  exact_solvers.rs  iterative_solvers.rs  mod.rs  solve.rs
src/matrix/: mod.rs  ops.rs  vector.rs
src/matrix/storage/: allocator.rs  array.rs  mod.rs  vec.rs  view.rs  view.rs.bak
src/parser/: ast.rs  mod.rs  parsing.rs  tokenizer.rs
