[package]
name = "cse"
authors = ["Christopher Hecker"]
description = "Collection of algorithms in CSE program"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.4"
num-traits = "0.2.18"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
nalgebra = { version = "0.32.4", features = ["rand"] }
rand = "0.8.5"

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "benchmark"
harness = false
